# haskell-mode-th-bug

./: README.md  stack.yaml
subproj-base/: subproj-base.cabal
subproj-base/data/: file.txt
subproj-base/src/: BaseLib.hs
subproj-main/: subproj-main.cabal
subproj-main/src/: Main.hs
