name:                subproj-base
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/k-bx/subproj-base#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov <k-bx@k-bx.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , file-embed
  exposed-modules:     BaseLib
